cluster/apps/filerun/db-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filerun-db
  namespace: filerun
  labels:
    service: filerun-db
spec:
  replicas: 0
  selector:
    matchLabels:
      service: filerun-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: filerun-db
    spec:
      containers:
        - env:
            - name: TZ
              value: "Europe/Madrid"
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: MYSQL_ROOT_PASSWORD
                  name: filerun-secret
            - name: MYSQL_USER
              valueFrom:
                secretKeyRef:
                  key: MYSQL_USER
                  name: filerun-secret
            - name: MYSQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: MYSQL_PASSWORD
                  name: filerun-secret
            - name: MYSQL_DATABASE
              valueFrom:
                secretKeyRef:
                  key: MYSQL_DATABASE
                  name: filerun-secret
          image: mariadb:12.3
          name: filerun-db
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              memory: 384Mi
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: filerun-db-pvc
      nodeSelector:
        kubernetes.io/hostname: nuc7pjyhn
      restartPolicy: Always
      volumes:
        - name: filerun-db-pvc
          persistentVolumeClaim:
            claimName: filerun-db-pvc
