cluster/apps/filerun/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filerun-web
  namespace: filerun
  labels:
    service: filerun-web
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    service: filerun-web
